<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PrefsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/prefs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary" />

    <me.hd.hookwzry.ui.prefs.GroupPrefs
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:title="@string/print_log_title">

        <me.hd.hookwzry.ui.prefs.SwitchPrefs
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defVal="true"
            app:key="@string/print_log_key"
            app:summary="@string/print_log_summary"
            app:title="@string/print_log_title" />
    </me.hd.hookwzry.ui.prefs.GroupPrefs>

    <me.hd.hookwzry.ui.prefs.GroupPrefs
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:title="@string/map_location_title">

        <me.hd.hookwzry.ui.prefs.SwitchPrefs
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defVal="false"
            app:key="@string/map_location_key"
            app:summary="@string/map_location_summary"
            app:title="@string/map_location_title" />
    </me.hd.hookwzry.ui.prefs.GroupPrefs>

    <me.hd.hookwzry.ui.prefs.GroupPrefs
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:title="@string/real_name_title">

        <me.hd.hookwzry.ui.prefs.SwitchPrefs
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defVal="false"
            app:key="@string/real_name_key"
            app:summary="@string/real_name_summary"
            app:title="@string/real_name_title" />
    </me.hd.hookwzry.ui.prefs.GroupPrefs>

</LinearLayout>